real shelly http addresses

--- a/dewPointViewer.html
+++ b/dewPointViewer.html
@@ -5,10 +5,10 @@
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
 
 <script language="javascript">
-const uriTempOut = "shellySim.php?d=TO";
-const uriTempIn  = "shellySim.php?d=TI";
-const uriHumOut  = "shellySim.php?d=HO";
-const uriHumIn   = "shellySim.php?d=HI";
+const uriTempOut = "http://192.168.33.1/rpc/Temperature.GetStatus?id=100";
+const uriTempIn  = "http://192.168.33.2/rpc/Temperature.GetStatus?id=100";
+const uriHumOut  = "http://192.168.33.1/rpc/Humidity.GetStatus?id=100";
+const uriHumIn   = "http://192.168.33.2/rpc/Humidity.GetStatus?id=100";
 
 window.addEventListener('load', function(e) {
 	timerHandler();	
